fix bug where sign up card was appeading off screen and configure mobile view

--- a/src/components/Forms/SignUp.css
+++ b/src/components/Forms/SignUp.css
@@ -3,7 +3,7 @@ p {
 }
 
 
-.element-wrapper {
+.signup-element-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -28,7 +28,8 @@ p {
   padding-top: 25px;
   width: 300px;
   border-radius: 15px;
-  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2)
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
+  margin-top: 50px;
 }
 
 .input-container{
@@ -78,13 +79,17 @@ p {
 }
 
 @media screen and (max-width: 768px) {
-  .element-wrapper {
+  .signup-element-wrapper {
     flex-direction: column;
     gap: 10px;
   }
 
-  .login-logo {
-    margin-top: 250px;
+  .signup-logo {
+    margin-top: 20px;
+  }
+
+  .signup-card {
+    margin-top: 0;
   }
 
 }
